--- a/src/Show.css
+++ b/src/Show.css
@@ -7,8 +7,9 @@
 .showPage img {
   width: 100%;
   height: 100%;
+  max-height: 400px;
   object-fit: cover;
-  background: hotpink;;
+  /* background: hotpink; */
 }
 
 .character {
