--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+  --primary-color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
   --secondary-bg-color: #343434;
   --secondary-bg-color-hover: #444444;
