--- a/src/Show.css
+++ b/src/Show.css
@@ -8,10 +8,10 @@
   width: 100%;
   height: 100%;
   max-height: 400px;
-  object-fit: cover;
+  object-fit: contain;
   /* background: hotpink; */
 }
 
-.character {
+.showPage .character {
   font-weight: bold;
 }
